--- a/estilos.css
+++ b/estilos.css
@@ -11,6 +11,13 @@ html {
 h1 {
     font-size: 80px;
     font-weight: bolder;
+    font-family: 'Poppins';
+}
+
+h2{
+    font-size: 60px;
+    font-weight: bolder;
+    font-family: 'Poppins';
 }
 
 h3 {
@@ -20,21 +27,31 @@ h3 {
 }
 
 h4 {
-    font-size: 25px;
+    font-size: 27px;
     font-weight: bold;
+    font-family: 'Poppins';
+}
+
+h5 {
+    color: #E4B717;
+    font-weight: lighter;
+    font-family: 'Poppins';
 }
 
 h6 {
     font-size: 25px;
     font-weight: 1;
+    font-family: 'Poppins';
 }
 
 .small {
     font-size: 15px;
+    font-family: 'Poppins';
 }
 
 .smaller {
     font-size: 18px;
+    font-family: 'Poppins';
 }
 
 .fs-4 {
@@ -94,8 +111,8 @@ h6 {
 }
 
 .btn-primary:hover {
-    background-color: #E32226;
-    border-color: #E32226;
+    background-color: #eb1317;
+    border-color: #eb1317;
 }
 
 .linea {
@@ -116,6 +133,14 @@ h6 {
 
 .card {
     border-radius: 0;
+}
+
+.estilos {
+    background-color: #625b5b4a;
+}
+
+.carousel-caption {
+    height: 100%;
 }
 
 footer {
