--- a/scss/main.css
+++ b/scss/main.css
@@ -8,6 +8,7 @@ h5 {
   color: #E4B717;
 }
 
+
 .navbar {
   color: #131111;
 }
@@ -150,55 +151,71 @@ h6 {
   padding: 0;
 }
 
-@media (max-width: 992px) {
+/* @media (max-width: 992px) {
   .navbar-collapse {
-    background-color: white; /* Fondo blanco para el menú desplegable */
+    background-color: white; 
     width: 100%;
   }
   .navbar-nav {
     width: 100%;
+    height: 200px;
     text-align: center;
+
   }
   .navbar-nav .nav-item {
-    display: block; /* Asegúrate de que los elementos sean bloques */
+    display: block; 
     width: 100%;
   }
   .navbar-nav .nav-link {
     padding: 10px 0;
     border-bottom: 1px solid #ddd;
-    color: black; /* Color predeterminado del enlace */
+    color: black;
   }
   .navbar-nav .nav-link:hover {
-    color: black; /* Color del enlace en estado hover */
+    color: black; 
   }
-}
-.navbar {
-  padding: 5px 2%;
-  height: 90px;
-}
+  .navbar {
+    padding: 5px 2%;
+    height: 90px;
+    
+  }
+  
+  .navbar .brand {
+    margin-right: auto;
+  }
+  
+  .navbar .nav {
+ 
+    margin-left: auto;
+    display: flex; 
+    flex-direction: column;
+  } */
+  
+  /* .navegadores {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .navegadores .nav-item {
+    display: inline-block; 
+    margin-left: 20px;
+  }
+  
+  .navegadores .nav-link {
+    text-decoration: none;
+    padding: 0;
+  }
+  
+} */
+@media (max-width: 992px) {
+  .navbar .nav {
+ 
+    margin-left: auto;
+    display: flex; 
+    flex-direction: column;
+  }
 
-.navbar .brand {
-  margin-right: auto;
-}
-
-.navbar .nav {
-  margin-left: auto;
-}
-
-.navegadores {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.navegadores .nav-item {
-  display: inline-block; /* Estilo general para dispositivos grandes */
-  margin-left: 20px;
-}
-
-.navegadores .nav-link {
-  text-decoration: none;
-  padding: 0;
 }
 
 .logo {
