--- a/scss/_pag.scss
+++ b/scss/_pag.scss
@@ -5,30 +5,28 @@
 
 @media (max-width: 992px) {
     .navbar-collapse {
-        background-color: white; /* Fondo blanco para el menú desplegable */
-        width: 100%;
+      background-color: white; /* Fondo blanco para el menú desplegable */
+      width: 100%;
     }
-
     .navbar-nav {
-        width: 100%;
-        text-align: center;
+      width: 100%;
+      height: 200px; /* Altura añadida de nuevo */
+      text-align: center;
     }
-
     .navbar-nav .nav-item {
-        display: block; /* Asegúrate de que los elementos sean bloques */
-        width: 100%;
+      display: block; /* Asegúrate de que los elementos sean bloques */
+      width: 100%;
     }
-
     .navbar-nav .nav-link {
-        padding: 10px 0;
-        border-bottom: 1px solid #ddd;
-        color: black; /* Color predeterminado del enlace */
+      padding: 10px 0;
+      border-bottom: 1px solid #ddd;
+      color: black; /* Color predeterminado del enlace */
     }
-
     .navbar-nav .nav-link:hover {
-        color: black; /* Color del enlace en estado hover */
+      color: black; /* Color del enlace en estado hover */
     }
-}
+  }
+  
 
 .navbar {
     padding: 5px 2%;
@@ -201,11 +199,13 @@ footer {
     .content {
         padding: 20px;
     }
-    .menu li {
+    .menu {
         list-style: none;
-        display: inline-block;
-        padding-inline: 20px;
-        text-align: center;
+        li a{
+            display: inline-block;
+            padding-inline: 20px;
+            text-align: center;
+            text-decoration: none;
+        }
     }
 }
-
