--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -50,10 +50,10 @@ h5 {
 }
 
 .btn-primary {
+    color: map-get($map: $paleta, $key: blanco);
     background-color: map-get($map: $paleta, $key: rojo);
     border-color: map-get($map: $paleta, $key: rojo);
 }
-
 
 .btn-primary:hover {
     background-color: map-get($map: $paleta, $key: rojoHover);
@@ -92,7 +92,6 @@ h5 {
     color: map-get($map: $paleta, $key: txtForm);
     
 }
-
 
 footer {
     background-color: map-get($map: $paleta, $key: bgFooter);
