--- a/scss/_pag.scss
+++ b/scss/_pag.scss
@@ -3,196 +3,266 @@
     padding: 0;
 }
 
-@media (max-width: 992px) {
-    .navbar-collapse {
-      background-color: white; /* Fondo blanco para el menú desplegable */
-      width: 100%;
+// NAVBAR
+
+nav {
+    @media (max-width: 992px) {
+        .navbar-collapse {
+            background-color: white;
+            /* Fondo blanco para el menú desplegable */
+            width: 100%;
+        }
+        .navbar-nav {
+            width: 100%;
+            height: 200px;
+            /* Altura añadida de nuevo */
+            text-align: center;
+        }
+        .navbar-nav .nav-item {
+            display: block;
+            /* Asegúrate de que los elementos sean bloques */
+            width: 100%;
+        }
+        .navbar-nav .nav-link {
+            padding: 10px 0;
+            border-bottom: 1px solid #ddd;
+            color: black;
+            /* Color predeterminado del enlace */
+        }
+        .navbar-nav .nav-link:hover {
+            color: black;
+            /* Color del enlace en estado hover */
+        }
+        .carousel-item .carousel-caption {
+            align-items: start;
+        }
     }
-    .navbar-nav {
-      width: 100%;
-      height: 200px; /* Altura añadida de nuevo */
-      text-align: center;
+    .carousel-caption {
+        align-items: center;
     }
-    .navbar-nav .nav-item {
-      display: block; /* Asegúrate de que los elementos sean bloques */
-      width: 100%;
+    .navbar {
+        padding: 5px 2%;
     }
-    .navbar-nav .nav-link {
-      padding: 10px 0;
-      border-bottom: 1px solid #ddd;
-      color: black; /* Color predeterminado del enlace */
+    .navbar .brand {
+        margin-right: auto;
     }
-    .navbar-nav .nav-link:hover {
-      color: black; /* Color del enlace en estado hover */
+    .navbar .nav {
+        margin-left: auto;
     }
-   
-    .carousel-item .carousel-caption{
-        align-items: start;
+    .navegadores {
+        list-style: none;
+        margin: 0;
+        padding: 0;
     }
-  }
-  
-  .carousel-caption{
-    align-items: center;
+    .navegadores .nav-item {
+        display: inline-block;
+        /* Estilo general para dispositivos grandes */
+        margin-left: 20px;
+    }
+    .navegadores .nav-link {
+        text-decoration: none;
+        padding: 0;
+    }
+    .logo {
+        height: 50px;
+    }
 }
-.navbar {
-    padding: 5px 2%;
-}
-
-.navbar .brand {
-    margin-right: auto;
-}
-
-.navbar .nav {
-    margin-left: auto;
-}
-
-.navegadores {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.navegadores .nav-item {
-    display: inline-block; /* Estilo general para dispositivos grandes */
-    margin-left: 20px;
-}
-
-.navegadores .nav-link {
-    text-decoration: none;
-    padding: 0;
-}
-
-.logo {
-    height: 50px;
-}
-
 
 
 // HEADER
 
-.btn-primary {
-    border-radius: 0;
-    padding: 5px 40px;
+#Inicio {
+    .btn-primary {
+        border-radius: 0;
+        padding: 5px 40px;
 
+    }
 }
 
 // NUESTRO EQUIPO
 
-.linea {
-    height: 2px;
-    opacity: 1;
-}
-
-.row {
-    border-radius: 0;
-    --bs-gutter-x: 0;
+#Equipo {
+    .linea {
+        height: 2px;
+        opacity: 1;
+    }
+    .row {
+        border-radius: 0;
+        --bs-gutter-x: 0;
+    }
 }
 
 // ESTILOS
 
-
-
-.custom-card {
-    border: none !important;
-}
-
-.card-img {
-    width: 100%;
-    height: auto;
-    border-radius: 0 !important;
-}
-
-.card-img-overlay {
-    border-radius: 0 !important;
+#Estilos {
+    .linea {
+        height: 2px;
+        opacity: 1;
+    }
+    .row {
+        border-radius: 0;
+        --bs-gutter-x: 0;
+    }
+    .custom-card {
+        border: none !important;
+    }
+    .card-img {
+        width: 100%;
+        height: auto;
+        border-radius: 0 !important;
+    }
+    .card-img-overlay {
+        border-radius: 0 !important;
+    }
 }
 
 // CRONOGRAMA
+#Cronograma {
+    text-align: center;
 
-.carousel-caption {
-    padding: 1rem;
-    border-radius: 0.5rem;
-}
+    .carousel-caption {
+        padding: 1rem;
+        border-radius: 0.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;  // Asegura que la altura sea el 100% del contenedor del carrusel
+    }
 
-.progress-container {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 2;
-}
+    .progress-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 2;
+    }
 
-.progress-bar {
-    width: calc(33.333% - 10px);
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
-    position: relative;
-    overflow: hidden;
-    border-radius: 5px;
-}
+    .progress-bar {
+        width: calc(33.333% - 10px);
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.5);
+        position: relative;
+        overflow: hidden;
+        border-radius: 5px;
+    }
 
-.progress-bar::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: white;
-    animation: none;
-    transform: scaleX(0);
-    transform-origin: left;
-    border-radius: 5px;
-}
-
-.progress-bar.active::before {
-    animation: progress 3s linear forwards;
-}
-
-@keyframes progress {
-    0% {
+    .progress-bar::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        background-color: white;
+        animation: none;
         transform: scaleX(0);
+        transform-origin: left;
+        border-radius: 5px;
     }
 
-    100% {
-        transform: scaleX(1);
+    .progress-bar.active::before {
+        animation: progress 3s linear forwards;
+    }
+
+    @keyframes progress {
+        0% {
+            transform: scaleX(0);
+        }
+        100% {
+            transform: scaleX(1);
+        }
     }
 }
+
 
 // FORM
 
-.form{
-    align-content: end;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+#form {
+    .form {
+        align-content: end;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .rellenando {
+        padding: 20px;
+        border: 12px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .form-select {
+        display: flex;
+        padding: 20px;
+        margin-left: 3%;
+        border: 12px;
+        width: 94%;
+    }
+    .btn-primary {
+        border-radius: 0;
+        padding: 5px 40px;
+    }
+    .fondo {
+        width: 100%;
+        height: auto;
+        margin: 0;
+    }
 }
 
-.rellenando{
-    padding: 20px;
-    border: 12px;
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+#exampleModal {
+    .form-select{
+        border-radius: 0px;
+    }
+    .form {
+        align-content: end;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+    .rellenando {
+        padding: 20px;
+        border: 12px;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    .form-select {
+        display: flex;
+        padding: 20px;
+        margin-left: 3%;
+        border: 12px;
+        width: 94%;
+    }
+    .btn-primary {
+        border-radius: 0;
+        padding: 5px 40px;
+    }
 }
 
-
-
-.form-select{
-    display: flex;
-    padding: 20px;
-    margin-left: 3%;
-    border: 12px;
-    width: 94%;
-}
-/* GRACIAS */
-.fondo{
-    width: 100%;
-    height: auto;
-    margin: 0;
+#Gracias {
+    border-radius: 0 !important;
+    border: none; // o 0 si prefieres
+    border: var(--bs-card-border-width) solid var(--bs-card-border-color);
+    .custom-card{
+        border: none;
+    }
+    .card-img {
+        width: 100%;
+        height: auto;
+        border-radius: 0 !important;
+    }
+    .card-img-overlay {
+        border-radius: 0 !important;
+    }
+    .fondo {
+        width: 100%;
+        height: auto;
+        margin: 0;
+    }
 }
 
 // FOOTER
@@ -200,13 +270,12 @@
 footer {
     width: auto;
     padding: 20px 0;
-
     .content {
         padding: 20px;
     }
     .menu {
         list-style: none;
-        li a{
+        li a {
             display: inline-block;
             padding-inline: 20px;
             text-align: center;
