--- a/scss/main.css
+++ b/scss/main.css
@@ -35,6 +35,7 @@ h5 {
 }
 
 .btn-primary {
+  color: #FBF0F0;
   background-color: #cf292c;
   border-color: #cf292c;
 }
@@ -73,6 +74,7 @@ h5 {
 
 .form-select {
   background-color: #CDCDCD;
+  color: #3E3E3E;
 }
 
 footer {
@@ -94,12 +96,12 @@ h1 {
   font-family: "Poppins", sans-serif;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 768px) {
   h1 {
     font-size: 3rem;
   }
   h6 {
-    font-size: clamp(1rem, 0.875rem + 0.5vw, 1rem);
+    font-size: clamp(0.875rem, 0.75rem + 0.25vw, 0.875rem);
   }
 }
 h2 {
@@ -166,116 +168,112 @@ h6 {
 }
 
 @media (max-width: 992px) {
-  .navbar-collapse {
-    background-color: white; /* Fondo blanco para el menú desplegable */
+  nav .navbar-collapse {
+    background-color: white;
+    /* Fondo blanco para el menú desplegable */
     width: 100%;
   }
-  .navbar-nav {
+  nav .navbar-nav {
     width: 100%;
-    height: 200px; /* Altura añadida de nuevo */
+    height: 200px;
+    /* Altura añadida de nuevo */
     text-align: center;
   }
-  .navbar-nav .nav-item {
-    display: block; /* Asegúrate de que los elementos sean bloques */
+  nav .navbar-nav .nav-item {
+    display: block;
+    /* Asegúrate de que los elementos sean bloques */
     width: 100%;
   }
-  .navbar-nav .nav-link {
+  nav .navbar-nav .nav-link {
     padding: 10px 0;
     border-bottom: 1px solid #ddd;
-    color: black; /* Color predeterminado del enlace */
+    color: black;
+    /* Color predeterminado del enlace */
   }
-  .navbar-nav .nav-link:hover {
-    color: black; /* Color del enlace en estado hover */
-  } 
-  /*AGREDADO*/
-  .form{
-    align-self: center;   /*AGREDADO*/
-    display: flex;   /*AGREDADO*/
-    flex-direction: column;   /*AGREDADO*/
-    border-radius: 30px;   /*AGREDADO*/
-    padding: 20px;   /*AGREDADO*/
-    max-width: 500px;    /*AGREDADO*/
-    width: 90%;    /*AGREDADO*/
-    margin: auto;   /*AGREDADO*/
-
+  nav .navbar-nav .nav-link:hover {
+    color: black;
+    /* Color del enlace en estado hover */
   }
-  .form .btn-primary{ 
-     font-size:larger; /*AGREDADO*/
-  }
-  .fondo {
-    align-items: center; /* AGREGADO */
-    width: auto; /* AGREGADO */
-    height: 100%;
+  nav .carousel-item .carousel-caption {
+    align-items: start;
   }
 }
-.navbar {
+nav .carousel-caption {
+  align-items: center;
+}
+nav .navbar {
   padding: 5px 2%;
 }
-
-.navbar .brand {
+nav .navbar .brand {
   margin-right: auto;
 }
-
-.navbar .nav {
+nav .navbar .nav {
   margin-left: auto;
 }
-
-.navegadores {
+nav .navegadores {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
-.navegadores .nav-item {
-  display: inline-block; /* Estilo general para dispositivos grandes */
+nav .navegadores .nav-item {
+  display: inline-block;
+  /* Estilo general para dispositivos grandes */
   margin-left: 20px;
 }
-
-.navegadores .nav-link {
+nav .navegadores .nav-link {
   text-decoration: none;
   padding: 0;
 }
-
-.logo {
+nav .logo {
   height: 50px;
 }
 
-.btn-primary {
+#Inicio .btn-primary {
   border-radius: 0;
-  color: #FBF0F0;  /* AGREGADO */
   padding: 5px 40px;
 }
 
-.linea {
+#Equipo .linea {
   height: 2px;
   opacity: 1;
 }
-
-.row {
+#Equipo .row {
   border-radius: 0;
   --bs-gutter-x: 0;
 }
 
-.custom-card {
+#Estilos .linea {
+  height: 2px;
+  opacity: 1;
+}
+#Estilos .row {
+  border-radius: 0;
+  --bs-gutter-x: 0;
+}
+#Estilos .custom-card {
   border: none !important;
 }
-
-.card-img {
+#Estilos .card-img {
   width: 100%;
   height: auto;
   border-radius: 0 !important;
 }
-
-.card-img-overlay {
+#Estilos .card-img-overlay {
   border-radius: 0 !important;
 }
 
-.carousel-caption {
+#Cronograma {
+  text-align: center;
+}
+#Cronograma .carousel-caption {
   padding: 1rem;
   border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
-
-.progress-container {
+#Cronograma .progress-container {
   position: absolute;
   top: 0;
   left: 0;
@@ -286,8 +284,7 @@ h6 {
   align-items: center;
   z-index: 2;
 }
-
-.progress-bar {
+#Cronograma .progress-bar {
   width: calc(33.333% - 10px);
   height: 100%;
   background-color: rgba(255, 255, 255, 0.5);
@@ -295,8 +292,7 @@ h6 {
   overflow: hidden;
   border-radius: 5px;
 }
-
-.progress-bar::before {
+#Cronograma .progress-bar::before {
   content: "";
   position: absolute;
   top: 0;
@@ -309,11 +305,9 @@ h6 {
   transform-origin: left;
   border-radius: 5px;
 }
-
-.progress-bar.active::before {
+#Cronograma .progress-bar.active::before {
   animation: progress 3s linear forwards;
 }
-
 @keyframes progress {
   0% {
     transform: scaleX(0);
@@ -322,35 +316,85 @@ h6 {
     transform: scaleX(1);
   }
 }
-.form {
+
+#form .form {
   align-content: end;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
-
-.rellenando {
+#form .rellenando {
   padding: 20px;
   border: 12px;
   display: flex;
   flex-direction: column;
   width: 100%;
 }
-
-.form-select {
+#form .form-select {
   display: flex;
   padding: 20px;
   margin-left: 3%;
   border: 12px;
   width: 94%;
 }
-
-/* GRACIAS */
-.fondo {
+#form .btn-primary {
+  border-radius: 0;
+  padding: 5px 40px;
+}
+#form .fondo {
   width: 100%;
   height: auto;
   margin: 0;
-  filter: brightness(0.5); /* AGREGADO */
+}
+
+#exampleModal .form-select {
+  border-radius: 0px;
+}
+#exampleModal .form {
+  align-content: end;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+#exampleModal .rellenando {
+  padding: 20px;
+  border: 12px;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+#exampleModal .form-select {
+  display: flex;
+  padding: 20px;
+  margin-left: 3%;
+  border: 12px;
+  width: 94%;
+}
+#exampleModal .btn-primary {
+  border-radius: 0;
+  padding: 5px 40px;
+}
+
+#Gracias {
+  border-radius: 0 !important;
+  border: none;
+  border: var(--bs-card-border-width) solid var(--bs-card-border-color);
+}
+#Gracias .custom-card {
+  border: none;
+}
+#Gracias .card-img {
+  width: 100%;
+  height: auto;
+  border-radius: 0 !important;
+}
+#Gracias .card-img-overlay {
+  border-radius: 0 !important;
+}
+#Gracias .fondo {
+  width: 100%;
+  height: auto;
+  margin: 0;
 }
 
 footer {
