--- a/scss/_pag.scss
+++ b/scss/_pag.scss
@@ -189,6 +189,9 @@ nav {
             display: flex;
             justify-content: center;
         }
+        .form-select{
+            width: 100%;
+        }
     }
     .form {
         align-content: end;
