--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -54,25 +54,26 @@ h5 {
     border: map-get($map: $paleta, $key: transparente);
 }
 
-.btn-primary {
-    color: map-get($map: $paleta, $key: blanco);
-    background-color: map-get($map: $paleta, $key: rojo);
-    border-color: map-get($map: $paleta, $key: rojo);
+a.btn-primary,
+button.btn-primary,
+input.btn-primary {
+    color: map-get($map: $paleta, $key: blanco) !important;
+    background-color: map-get($map: $paleta, $key: rojo) !important;
+    border-color: map-get($map: $paleta, $key: rojo) !important;
 }
 
-.btn-primary:hover {
-    background-color: map-get($map: $paleta, $key: rojoHover);
-    border-color: map-get($map: $paleta, $key: rojoHover);
+a.btn-primary:hover,
+button.btn-primary:hover,
+input.btn-primary:hover {
+    background-color: map-get($map: $paleta, $key: rojoHover) !important;
+    border-color: map-get($map: $paleta, $key: rojoHover) !important;
 }
 
-.btn-primary:active, .btn-primary:focus{
-    background-color: map-get($map: $paleta, $key: rojoHover);
-    border-color: map-get($map: $paleta, $key: rojoHover);
-}
-
-.boton:active{
-    background-color: map-get($map: $paleta, $key: rojoHover);
-    border-color: map-get($map: $paleta, $key: rojoHover);
+a.btn-primary:active,
+button.btn-primary:active,
+input.btn-primary:active {
+    background-color: map-get($map: $paleta, $key: rojoHover) !important;
+    border-color: map-get($map: $paleta, $key: rojoHover) !important;
 }
 
 .linea {
