--- a/scss/_pag.scss
+++ b/scss/_pag.scss
@@ -12,57 +12,70 @@ nav {
             /* Fondo blanco para el menú desplegable */
             width: 100%;
         }
+
         .navbar-nav {
             width: 100%;
             height: 200px;
             /* Altura añadida de nuevo */
             text-align: center;
         }
+
         .navbar-nav .nav-item {
             display: block;
             /* Asegúrate de que los elementos sean bloques */
             width: 100%;
         }
+
         .navbar-nav .nav-link {
             padding: 10px 0;
             border-bottom: 1px solid #ddd;
             color: black;
             /* Color predeterminado del enlace */
         }
+
         .navbar-nav .nav-link:hover {
             color: black;
             /* Color del enlace en estado hover */
         }
+
         .carousel-item .carousel-caption {
             align-items: start;
         }
     }
+
     .carousel-caption {
         align-items: center;
     }
+
     .navbar {
         padding: 5px 2%;
     }
+
     .navbar .brand {
         margin-right: auto;
     }
+
     .navbar .nav {
         margin-left: auto;
     }
+
     .navegadores {
         list-style: none;
         margin: 0;
         padding: 0;
     }
+
     .navegadores .nav-item {
         display: inline-block;
         /* Estilo general para dispositivos grandes */
         margin-left: 20px;
     }
+
     .navegadores .nav-link {
         text-decoration: none;
         padding: 0;
     }
+
     .logo {
         height: 50px;
     }
@@ -86,6 +99,7 @@ nav {
         height: 2px;
         opacity: 1;
     }
+
     .row {
         border-radius: 0;
         --bs-gutter-x: 0;
@@ -99,18 +113,22 @@ nav {
         height: 2px;
         opacity: 1;
     }
+
     .row {
         border-radius: 0;
         --bs-gutter-x: 0;
     }
+
     .custom-card {
         border: none !important;
     }
+
     .card-img {
         width: 100%;
         height: auto;
         border-radius: 0 !important;
     }
+
     .card-img-overlay {
         border-radius: 0 !important;
     }
@@ -126,7 +144,7 @@ nav {
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 100%;  // Asegura que la altura sea el 100% del contenedor del carrusel
+        height: 100%; // Asegura que la altura sea el 100% del contenedor del carrusel
     }
 
     .progress-container {
@@ -172,6 +190,7 @@ nav {
         0% {
             transform: scaleX(0);
         }
+
         100% {
             transform: scaleX(1);
         }
@@ -188,113 +207,135 @@ nav {
             display: flex;
             justify-content: center;
         }
-        .form-select{
+
+        .form-select {
             width: 100%;
         }
     }
+
     .form {
-        align-content: end;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    }
-    .rellenando {
-        padding: 20px;
-        border: 12px;
         display: flex;
         flex-direction: column;
-        width: 100%;
-    }
-    .form-select {
-        display: flex;
-        padding: 20px;
-        margin-left: 3%;
-        border: 12px;
-        width: 94%;
-    }
-    .btn-primary {
-        border-radius: 0;
-        padding: 5px 40px;
-    }
-    .fondo {
-        width: 100%;
-        height: auto;
-        margin: 0;
-    }
-    
-}
+        align-items: center; // Centra horizontalmente los elementos del formulario
 
-#exampleModal {
-    .form-select{
-        border-radius: 0px;
-    }
-    .form {
-        align-content: end;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    }
-    .rellenando {
-        padding: 20px;
-        border: 12px;
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-    }
-    .form-select {
-        display: flex;
-        padding: 20px;
-        margin-left: 3%;
-        border: 12px;
-        width: 94%;
-    }
-    .btn-primary {
-        border-radius: 0;
-        padding: 5px 40px;
-    }
-}
+        .rellenando {
+            padding: 20px;
+            border: 12px;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
 
-#Gracias {
-    border-radius: 0 !important;
-    border: none; // o 0 si prefieres
-    border: var(--bs-card-border-width) solid var(--bs-card-border-color);
-    .custom-card{
-        border: none;
-    }
-    .card-img {
-        width: 100%;
-        height: auto;
-        border-radius: 0 !important;
-    }
-    .card-img-overlay {
-        border-radius: 0 !important;
-    }
-    .fondo {
-        width: 100%;
-        height: auto;
-        margin: 0;
-    }
-    .btn-primary {
-        border-radius: 0;
-        padding: 5px 40px;
-    }
-}
+        .btn-primary {
+            border-radius: 0;
+            padding: 5px 40px;
+        }
 
-// FOOTER
+        .form-select {
+            display: flex;
+            padding: 20px;
+            margin-left: 3%;
+            border: 12px;
+            width: 94%;
+        }
 
-footer {
-    width: auto;
-    padding: 20px 0;
-    .content {
-        padding: 20px;
+        .fondo {
+            width: 100%;
+            height: auto;
+            margin: 0;
+        }
+
+        .card {
+            border: none;
+            height: 100%;
+            object-fit: cover;
+        }
+
     }
-    .menu {
-        list-style: none;
-        li a {
-            display: inline-block;
-            padding-inline: 20px;
-            text-align: center;
-            text-decoration: none;
+
+    #exampleModal {
+        .form-select {
+            border-radius: 0px;
+        }
+
+        .form {
+            align-content: end;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        .rellenando {
+            padding: 20px;
+            border: 12px;
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
+
+        .form-select {
+            display: flex;
+            padding: 20px;
+            margin-left: 3%;
+            border: 12px;
+            width: 94%;
+        }
+
+        .btn-primary {
+            border-radius: 0;
+            padding: 5px 40px;
         }
     }
-}
+
+    #Gracias {
+        border-radius: 0 !important;
+        border: none; // o 0 si prefieres
+        border: var(--bs-card-border-width) solid var(--bs-card-border-color);
+
+        .custom-card {
+            border: none;
+        }
+
+        .card-img {
+            width: 100%;
+            height: auto;
+            border-radius: 0 !important;
+        }
+
+        .card-img-overlay {
+            border-radius: 0 !important;
+        }
+
+        .fondo {
+            width: 100%;
+            height: auto;
+            margin: 0;
+        }
+
+        .btn-primary {
+            border-radius: 0;
+            padding: 5px 40px;
+        }
+    }
+
+    // FOOTER
+
+    footer {
+        width: auto;
+        padding: 20px 0;
+
+        .content {
+            padding: 20px;
+        }
+
+        .menu {
+            list-style: none;
+
+            li a {
+                display: inline-block;
+                padding-inline: 20px;
+                text-align: center;
+                text-decoration: none;
+            }
+        }
+    }
