--- a/scss/main.css
+++ b/scss/main.css
@@ -92,6 +92,10 @@ input.btn-primary:active {
   color: #3E3E3E;
 }
 
+.card {
+  --bs-card-border-color: map-get($map: $paleta, $key: transparente) ;
+}
+
 footer {
   background-color: #2C2121;
   color: #FBF0F0;
@@ -101,18 +105,12 @@ footer {
   color: #FBF0F0;
 }
 
+#form b {
+  color: #E4B717;
+}
+
 #Gracias a {
   color: #FBF0F0;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-}
-
-h1 {
-  font-size: clamp(3.5rem, 2rem + 5vw, 5rem);
-  font-weight: 800;
-  font-family: "Poppins", sans-serif;
 }
 
 @media (max-width: 768px) {
@@ -123,9 +121,25 @@ h1 {
     font-size: clamp(0.875rem, 0.75rem + 0.25vw, 0.875rem);
   }
 }
+body {
+  font-family: "Poppins", sans-serif;
+}
+
+h1 {
+  font-size: clamp(3.5rem, 2rem + 5vw, 5rem);
+  font-weight: 800;
+  font-family: "Poppins", sans-serif;
+}
+
 h2 {
   font-size: clamp(2.5rem, 1.5rem + 4vw, 3.75rem);
   font-weight: 800;
+  font-family: "Poppins", sans-serif;
+}
+
+.h2-small {
+  font-size: clamp(2.6875rem, 2.3125rem + 2vw, 2.6875rem);
+  font-weight: 400;
   font-family: "Poppins", sans-serif;
 }
 
@@ -374,6 +388,12 @@ nav .logo {
   width: 100%;
   height: auto;
   margin: 0;
+}
+#form .card {
+  border: none;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 #exampleModal .form-select {
