--- a/scss/main.css
+++ b/scss/main.css
@@ -350,46 +350,40 @@ nav .logo {
   }
 }
 
-@media (max-width: 992px) {
-  #form .form {
-    align-content: center;
-    display: flex;
-    justify-content: center;
-  }
-  #form .form-select {
-    width: 100%;
-  }
-}
 #form .form {
-  align-content: end;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  align-items: center;
+  margin: auto;
+  max-width: 40%;
 }
-#form .rellenando {
+@media (max-width: 576px) {
+  #form .form {
+    max-width: 85%;
+    padding: 0 10px;
+  }
+}
+#form .form .rellenando {
   padding: 20px;
   border: 12px;
-  display: flex;
-  flex-direction: column;
   width: 100%;
 }
-#form .form-select {
-  display: flex;
+#form .form .btn-primary {
+  border-radius: 0;
+  padding: 5px 40px;
+}
+#form .form .form-select {
   padding: 20px;
   margin-left: 3%;
   border: 12px;
   width: 94%;
 }
-#form .btn-primary {
-  border-radius: 0;
-  padding: 5px 40px;
-}
-#form .fondo {
+#form .form .fondo {
   width: 100%;
   height: auto;
   margin: 0;
 }
-#form .card {
+#form .form .card {
   border: none;
   height: 100%;
   -o-object-fit: cover;
