maldito formulario ya estaaaasss

--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -7,7 +7,7 @@ $paleta: (
     'rojo': #cf292c,
     'rojoHover': #eb1317,
     'acento': #E4B717,
-    'gris':#BEB4B4,
+    'gris':#625b5b40,
     'form':#CDCDCD,
     'txtForm':#3E3E3E,
     'transparente':#ffffff00
