--- a/scss/main.css
+++ b/scss/main.css
@@ -66,7 +66,7 @@ input.btn-primary:active {
 }
 
 .estilos {
-  background-color: #BEB4B4;
+  background-color: rgba(98, 91, 91, 0.2509803922);
 }
 
 .card {
